--- a/src/MenuContent.scss
+++ b/src/MenuContent.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: hidden;
   overflow-x: hidden;
   z-index: 2;
   backdrop-filter: blur(20px);
